support latest manifold changes